--- a/Website/index.html
+++ b/Website/index.html
@@ -10,14 +10,6 @@
     <link rel="stylesheet" href="/Icon/fontawesome.min.css">
     <!-- Link to external script -->
     <script language="javascript" src="/Website/script.js" type="text/javascript"></script>
-    <!-- cdn files -->
-     <!-- <link rel="stylesheet" href="C:\Users\USER\Documents\DataAnalysis\2025 Continua\Fave Event\CDN\css\intlTelInput.css">
-     <script language="javascript" src="C:\Users\USER\Documents\DataAnalysis\2025 Continua\Fave Event\CDN\js\intlTelInput.min.js"></script>
-     <script language="javascript" src="C:\Users\USER\Documents\DataAnalysis\2025 Continua\Fave Event\CDN\js\utils.js"></script> -->
-
-    <!-- <link rel="stylesheet" href="file:///C:/Users/USER/Documents/DataAnalysis/2025%20Continua/Fave%20Event/Website/intlTelInput.css">
-     <script language="javascript" src="file:///C:/Users/USER/Documents/DataAnalysis/2025%20Continua/Fave%20Event/Website/intlTelInput.min.js"></script>
-     <script language="javascript" src="file:///C:/Users/USER/Documents/DataAnalysis/2025%20Continua/Fave%20Event/Website/utils.js"></script> -->
     <title>DeeSaint Concept</title>
 </head>
 <body>
@@ -42,8 +34,8 @@
                 </li>
                 <li><a href="">DESIGN STUDIO</a></li>
                 <li><a href="">GALLERY</a></li>
-                <li><a href="" class="la-contact">CONTACT </a></li>
-                <li><a href="" class="la-quote">Get A Quote</a></li>
+                <li><a href="#contact" class="la-contact">CONTACT </a></li>
+                <li><a href="#contact" class="la-quote">Get A Quote</a></li>
             </ul>    
             <div class="ham-sidebar">
                     <!-- Hamburger Menu -->
@@ -65,9 +57,6 @@
         </ul>
     </div>
 </div>
-<!-- <div class="background-img">
-                <img src="C:\Users\USER\Documents\DataAnalysis\2025 Continua\Works\Fave Event\IMG\Page 1\danny.jpg" alt="Brand Logo">
-            </div>  -->
 <div class="banner">
     <div class="banner-box">
         <div class="background-scroll">
@@ -86,12 +75,9 @@
                     This insight fuels our ability to craft tailored experiences, 
                     ensuring every detail is intentional and every opportunity fully explored.
                 </p>
-                <button><i class="fa-light fa-address-book fa-lg" style="color: #000000;"></i>
-                    Contact Us
+                <button><a href="#contact"><i class="fa-light fa-address-book fa-lg" style="color: #000000;"></i>
+                    Contact Us </a>
                 </button>
-                <!-- <p><i class="fa-solid fa-id-badge fa-lg" style="color: #000000;"></i>
-                    Contact Us
-                </p> -->
             </div>
         </div>
     </div>
@@ -240,8 +226,6 @@
                 <div class="collection">
                     <a href="">
                         <img src="/IMG/Page 3/img1.jpg" alt="gallery img1">
-                        <!-- </a>
-                        <a href="" class="link"> -->
                        <p>Lights, Lens, Legacy <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Every detail captured boldly
                         </p>
@@ -251,8 +235,6 @@
                 <div class="collection">
                     <a href="">
                         <video class="" src="/IMG/Page 3/Vid 4.mp4" autoplay muted loop playsinline></video>
-                        <!-- </a>
-                        <a href="" class="link"> -->
                         <p>Studio vibes ignited <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Your moments, our masterpiece
                         </p>
@@ -262,8 +244,6 @@
                 <div class="collection">
                     <a href="">
                         <img src="/IMG/Page 3/img 2.jpg" alt="gallery img3">
-                        <!-- </a> -->
-                        <!-- <a href="" class="link"> -->
                         <p>Beyond the ordinary <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Styled with quiet anticipation
                         </p>
@@ -273,8 +253,6 @@
                 <div class="collection">
                     <a href="">
                         <video class="" src="/IMG/Page 3/No 5.mp4" autoplay muted loop playsinline></video>
-                        <!-- </a> -->
-                        <!-- <a href="" class="link"> -->
                         <p>Ideas rise and resonate <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Tomorrow starts from here.
                         </p>
@@ -284,8 +262,6 @@
                 <div class="collection">
                     <a href="">
                         <img src="/IMG/Page 3/No 8.jpg" alt="gallery img3">
-                        <!-- </a> -->
-                        <!-- <a href="" class="link"> -->
                         <p>Step where legends shine, <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Pose, pause, own it.
                         </p>
@@ -295,8 +271,6 @@
                 <div class="collection">
                     <a href="">
                         <img src="/IMG/Page 3/No 7.jpg" alt="gallery img3">
-                        <!-- </a> -->
-                        <!-- <a href="" class="link"> -->
                         <p>We spin the night,<span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Vibes that ignite souls.
                         </p>
@@ -309,58 +283,49 @@
 </div>
 
 <!-- page 5 -->
-<div class="contact">
+<div class="contact" id="contact">
     <div class="contact-me">
         <div class="contact-hdr">
             <h2>Dee</h2>  
             <h1>Saint Concept</h1>
         </div>
+        <div class="newsletter">
+            <p>Join Our Newsletter <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #000000;"></i></span></p>
+            <a href=""><i class="fa-solid fa-phone fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-youtube fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-instagram fa-xl"></i></a>
+        </div>
         <div class="contact-container">
             <div class="location">
-                <div class="newsletter">
-                    <p>Join Our Newsletter <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #000000;"></i></span></p>
-                    <a href=""><i class="fa-solid fa-phone fa-xl"></i></a>
-                    <a href=""><i class="fa-brands fa-youtube fa-xl"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram fa-xl"></i></a>
+                <div class="quote">
+                    <div class="quote-cntr"> 
+                        <div class="hder">
+                            <h1>Request A Personalized Quote<br>Today</h1>
+                            <p class="tagline">
+                                From planning and photography<br>
+                                to videography.<br>
+                                we design,<br>
+                                capture, and celebrate your story.
+                            </p>
+                        </div>
+                        <div class="text-ctn">
+                            <a href="">
+                                <i class="fa-solid fa-phone fa-xl"></i>
+                                <div class="text-block">
+                                    <p>phone</p>
+                                    <p>(+234) 0810 234 4848</p>
+                                </div>
+                            </a>
+                            <a href="">
+                                <i class="fa-regular fa-envelope fa-xl"></i>
+                                <div class="text-block">
+                                    <p>Email support</p>
+                                    <p>demo@demo.com</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <hr>
-                <p>Head Office</p>
-                <hr>
-                <div class="address">
-                    <a href="">
-                        <p> Hakeem Dickson,<br>
-                        Lekki Phase 1,<br>
-                        Lagos<br><br>
-                        +234 810 551 2512</p>
-                    </a>
-                    <a href="">
-                        <p>No 13, Omugo Street,<br> 
-                        Ilesanmi tanke Ilorin, <br> 
-                        Kwara State<br><br>
-                        +234 810 651 1516
-                        </p>
-                    </a>
-                </div><hr>
-                <a href="">Locations</a><hr>
-                <div class="cities">
-                    <a href="">
-                        Lagos<br>
-                        Kwara<br>
-                        Ogun<br>
-                    </a>
-                    <a href="">
-                        Abuja<br>
-                        Osun<br>
-                        Oyo<br>
-                    </a>
-                </div>
-            </div>
-            <div class="location-section-2">
-                <hr class="a">
-                <a href="">Careers</a>
-                <hr class="b">
-                <a href="">Events</a>
-                <hr class="c">
             </div>
             <div class="form-hdr">
                 <h2>Contact us for your Next Event</h2>
@@ -409,6 +374,7 @@
         </div>
     </div>
 </div>
+<div class="top"></div>
 <!-- footer -->
 <div class="footer">
     <div class="footer-container">
