--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Linking to external Css-->
-    <link rel="stylesheet" href="/Website/style.css">
+    <link rel="stylesheet" href="Website/style.css">
     <!-- Font link -->
-    <link rel="stylesheet" href="/Icon/all.min.css">
-    <link rel="stylesheet" href="/Icon/fontawesome.min.css">
+    <link rel="stylesheet" href="Icon/all.min.css">
+    <link rel="stylesheet" href="Icon/fontawesome.min.css">
     <!-- Link to external script -->
-    <script language="javascript" src="/Website/script.js" type="text/javascript"></script>
+    <script language="javascript" src="Website/script.js" type="text/javascript"></script>
     <title>DeeSaint Concept</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <div class="navbar">
         <nav class="navbar-container">
             <div class="logo">
-                <img src="/IMG/Page 1/logss.png" alt="Brand Logo" width="150" height="65">
+                <img src="IMG/Page 1/logss.png" alt="Brand Logo" width="150" height="65">
             </div>
             <ul class="nav-links">
                 <li><a href="">HOME</a></li>  
@@ -61,11 +61,11 @@
     <div class="banner-box">
         <div class="background-scroll">
             <div class="background-slides">
-                <img src="/IMG/Page 1/background 1.jpg" class="slide slide1" alt="Event 1">
-                <img src="/IMG/Page 1/background 2.jpg" class="slide slide2" alt="Event 2">
-                <img src="/IMG/Page 1/background 3.jpg" class="slide slide3" alt="Event 3">
-                <video src="/IMG/Page 1/background-vid-4.mp4" class="slide slide4"  autoplay muted loop playsinline></video>
-                <img src="/IMG/Page 1/background 5.jpg" class="slide slide5" alt="Event 5">
+                <img src="IMG/Page 1/background 1.jpg" class="slide slide1" alt="Event 1">
+                <img src="IMG/Page 1/background 2.jpg" class="slide slide2" alt="Event 2">
+                <img src="IMG/Page 1/background 3.jpg" class="slide slide3" alt="Event 3">
+                <video src="IMG/Page 1/background-vid-4.mp4" class="slide slide4"  autoplay muted loop playsinline></video>
+                <img src="IMG/Page 1/background 5.jpg" class="slide slide5" alt="Event 5">
             </div>
             <div class="banner-container">
                 <h1>Bringing <br> Excellence In Every Details</h1>
@@ -225,7 +225,7 @@
             <div class="lookbook">
                 <div class="collection">
                     <a href="">
-                        <img src="/IMG/Page 3/img1.jpg" alt="gallery img1">
+                        <img src="IMG/Page 3/img1.jpg" alt="gallery img1">
                        <p>Lights, Lens, Legacy <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Every detail captured boldly
                         </p>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="collection">
                     <a href="">
-                        <video class="" src="/IMG/Page 3/Vid 4.mp4" autoplay muted loop playsinline></video>
+                        <video class="" src="IMG/Page 3/Vid 4.mp4" autoplay muted loop playsinline></video>
                         <p>Studio vibes ignited <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Your moments, our masterpiece
                         </p>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="collection">
                     <a href="">
-                        <img src="/IMG/Page 3/img 2.jpg" alt="gallery img3">
+                        <img src="IMG/Page 3/img 2.jpg" alt="gallery img3">
                         <p>Beyond the ordinary <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Styled with quiet anticipation
                         </p>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="collection">
                     <a href="">
-                        <video class="" src="/IMG/Page 3/No 5.mp4" autoplay muted loop playsinline></video>
+                        <video class="" src="IMG/Page 3/No 5.mp4" autoplay muted loop playsinline></video>
                         <p>Ideas rise and resonate <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Tomorrow starts from here.
                         </p>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="collection">
                     <a href="">
-                        <img src="/IMG/Page 3/No 8.jpg" alt="gallery img3">
+                        <img src="IMG/Page 3/No 8.jpg" alt="gallery img3">
                         <p>Step where legends shine, <span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Pose, pause, own it.
                         </p>
@@ -270,7 +270,7 @@
                 </div>
                 <div class="collection">
                     <a href="">
-                        <img src="/IMG/Page 3/No 7.jpg" alt="gallery img3">
+                        <img src="IMG/Page 3/No 7.jpg" alt="gallery img3">
                         <p>We spin the night,<span><i class="fa-regular fa-arrow-up-right fa-lg" style="color: #605d5d;"></i></span><br>
                         Vibes that ignite souls.
                         </p>
